	1308 Golden Axe:		NEED INFO.
	13160, 13161 Destroyer:	Can break target's armor when fired at close range.
	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

========================
11/21
	* Fixed all cast times and delays of Gunslinger skills [Playtester]
	- cast time of Dust is reduced by dex
	- Tracking cast time cannot be reduced by anything
	- Increase Accuracy requires 4 coins instead of 2
	* Updated healing values of Ketupat and Red Thorn Fruit [Playtester]
11/20
	* Official skill for Ancient Mimic, Death Word and Angels [Playtester]
	- also made NPC_DEFENDER self targeted
	- Shelter now has angry mode
	* The max level of NPC_SPLASHATTACK is now 1. [Skotlex]
	* Flywing and Butterfly Wing will now use the teleport skill [Playtester]
	* Official skills for Breeze and Plasma [Playtester]
	* Official X.4 skills thanks to Tharis [Playtester]
	- also set MVP skills to MVP skill level
11/19
	* Official skills for Abyss Lake mobs [Playtester]
	- G_Acidus, G_Ferus and Green Iguana don't have skills
	- someone should test if all skills are working
	- Green Iguana is now a looter
11/18
	* Official skills for Bacsojin and Orc Baby [Playtester]
	- yes Bacsojin's skills are interuptable despite MVP status
	* Updated X.1 mob stats [Playtester]
	* Official skills for Detale and Thanatos [Playtester]
	- pm me if you want to help converting the mob skills
11/17
	* Updated remaining X.2 mob stats [Playtester]
	* Updated Bio Lab and Juperos mob stats [Playtester]
	* Fixed some sprite mob names [Playtester]
11/16
	* Fixed the misleading description of what item_avail does. [Skotlex]
	* Updated X.3 mob stats [Playtester]
	* Updated Kiel dungeon mob stats [Playtester]
	* Changed type of unimplemented cards to "Card" [Playtester]
11/15
	* Updated Odin Temple mob stats [Playtester]